# hugo2zola

./: .gitignore  README.md  h2z.py  pyproject.toml
src/migration/: content_node.py  migrator.py
src/migration/filters/: base.py  clean_metadata.py  debug.py  highlighting.py  internal_links.py  replace_content.py  shortcodes.py
tests/: stub_node.py  test_internal_links_filter.py  test_shortcodes_filter.py
